<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textview_bacground_big"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/bmi_title"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/bmi_vice_title"
                android:textSize="15sp" />
        </LinearLayout>


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="1">
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <!--这里是隐藏的LinearLayout，为的是在应用启动时防止下面的EditText自动获取焦点，打开软件盘，挤压界面-->
            </LinearLayout>


            <TextView
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@color/chocum_green"/>

            <TableRow android:layout_marginTop="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/textview_bacground"
                    android:gravity="center"
                    android:paddingBottom="1dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="1dp"
                    android:text="@string/bmi_info_name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/bmi_name_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:inputType="text"
                    android:maxLength="4"
                    android:singleLine="true" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/textview_bacground"
                    android:gravity="center"
                    android:paddingBottom="1dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="1dp"
                    android:text="@string/bmi_info_id"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginRight="10dp">
                    <EditText
                        android:id="@+id/bmi_id_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="7"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        android:hint="@string/bmi_id_hint"
                        android:maxLength="18" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="/X"
                        android:layout_weight="1" />
                </LinearLayout>

            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/textview_bacground"
                    android:gravity="center"
                    android:paddingBottom="1dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="1dp"
                    android:text="@string/bmi_info_gender"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/bmi_rg_gender"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp">

                    <RadioButton
                        android:id="@+id/bmi_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="@color/pink"
                        android:textSize="18dp" />

                    <RadioButton
                        android:id="@+id/bmi_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textColor="@color/blue"
                        android:textSize="18dp" />
                </RadioGroup>
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/textview_bacground"
                    android:gravity="center"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/age"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/bmi_age_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/tooyoung"
                    android:inputType="number"
                    android:maxLength="2"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />
            </TableRow>


            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/textview_bacground"
                    android:gravity="center"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/height"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/bmi_height_et"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/bmi_height_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/textview_bacground"
                    android:gravity="center"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/weight"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/bmi_weight_et"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/bmi_weight_hint"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:maxLength="4"
                    android:singleLine="true" />
            </TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bmi_bn_reset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_gray_selector"
                    android:text="@string/bmi_btn_clear" />

                <Button
                    android:id="@+id/bmi_bn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_blue_selector"
                    android:text="@string/bmi_btn_confirm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bmi_bottom_des_1"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/bmi_bottom_des_2"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/bmi_bottom_des_4"
                    android:textSize="15sp" />
            </LinearLayout>


        </TableLayout>
    </LinearLayout>
</ScrollView>